Marketplace/files/iptables
# Generated by iptables-save v1.8.4 on Fri Jul 16 17:08:25 2021
*filter
:INPUT DROP [17:776]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [37541:2339909]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -s 127.0.0.0/8 -j ACCEPT
-A INPUT -s 82.199.32.64/28 -j ACCEPT
-A INPUT -s 192.168.251.0/24 -j ACCEPT
-A INPUT -s 10.8.0.0/24 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT
# Aceptar SNMP de centreon
-A INPUT -s 92.118.101.52/32 -p udp -m udp --dport 161 -j ACCEPT
COMMIT
# Completed on Fri Jul 16 17:08:25 2021
# Generated by iptables-save v1.8.4 on Fri Jul 16 17:08:25 2021
*security
:INPUT ACCEPT [66885:92445983]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [37541:2339909]
COMMIT
# Completed on Fri Jul 16 17:08:25 2021
# Generated by iptables-save v1.8.4 on Fri Jul 16 17:08:25 2021
*raw
:PREROUTING ACCEPT [66902:92446759]
:OUTPUT ACCEPT [37541:2339909]
COMMIT
# Completed on Fri Jul 16 17:08:25 2021
# Generated by iptables-save v1.8.4 on Fri Jul 16 17:08:25 2021
*mangle
:PREROUTING ACCEPT [66902:92446759]
:INPUT ACCEPT [66902:92446759]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [37541:2339909]
:POSTROUTING ACCEPT [37541:2339909]
COMMIT
# Completed on Fri Jul 16 17:08:25 2021
# Generated by iptables-save v1.8.4 on Fri Jul 16 17:08:25 2021
*nat
:PREROUTING ACCEPT [28:1388]
:INPUT ACCEPT [11:612]
:POSTROUTING ACCEPT [934:58202]
:OUTPUT ACCEPT [934:58202]
COMMIT
# Completed on Fri Jul 16 17:08:25 2021
